--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
-    <head>
-    </head>
-       <body>
-           <p>fdjheuhsjhesdf</p>
-            
-        </body>
-        </html>
+    <head><title>Hello</title></head>
+<body bgcolor= "#fcdef5">
+    <p style= "font-size:25">Good Morning</p>
+    <a href= "https://www.google.com">Google</a><br>
+    <a href= "second.html"> Second Page </a><br>    
+    <a href= "third.html"> Third Page </a><br>
+    <a href= "fourth.html"> Fourth Page </a><br>
+    <img src="./images/bunny.jpg" title="bunny" height="100" width="100">
+    
+    <h1 style= "color:85b3fc">Welcome to my home page!</h1>
+    <font size= "4" color="#deb7ff" face= "verdana">How are you doing today?</font>
+
+<iframe src="https://giphy.com/embed/l49JYiYQIpmS5jM1a" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/love-cute-l49JYiYQIpmS5jM1a">via GIPHY</a></p>
+</body>
+
+
+</html>
