--- a/third.html
+++ b/third.html
@@ -1,7 +1,7 @@
 <html>
     <head><title>Third Page</title></head>
 <body>
-    <p>BLUB BLUB BLUB</p>
+    <p>Welcome to my Third Page</p>
     <a href= "https://www.google.com">Google</a><br>
     <a href= "second.html"> Second Page </a><br>    
     <a href= "index.html"> Home Page </a><br>
