--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head><title>Hello</title></head>
 <body bgcolor= "#fcdef5">
-    <p style= "font-size:25">Good Morning</p>
+    <p style= "font-size:25">Good Morning - Welcome to my Home Page</p>
     <a href= "https://www.google.com">Google</a><br>
     <a href= "second.html"> Second Page </a><br>    
     <a href= "third.html"> Third Page </a><br>
