--- a/second.html
+++ b/second.html
@@ -1,7 +1,7 @@
 <html>
     <head><title>Second Page</title></head>
 <body>
-    <p>BLOOP</p>
+    <p>Welcome to my Second Page</p>
     <a href= "https://www.google.com">Google</a><br>
     <a href= "index.html"> Home Page </a><br>    
     <a href= "third.html"> Third Page </a><br>
