--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <head><title>Hello</title></head>
+    <head><title>Hello:)</title></head>
 <body bgcolor= "#fcdef5">
     <p style= "font-size:25">Good Morning - Welcome to my Home Page</p>
     <a href= "https://www.google.com">Google</a><br>
