--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="./images/bunny.jpg" title="bunny" height="100" width="100">
     
     <h1 style= "color:85b3fc">Welcome to my home page!</h1>
-    <font size= "4" color="#deb7ff" face= "verdana">How are you doing today?</font>
+    <font size= "4" color="#f3b2ff" face= "verdana">How are you doing today?</font>
 
 <iframe src="https://giphy.com/embed/l49JYiYQIpmS5jM1a" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/love-cute-l49JYiYQIpmS5jM1a">via GIPHY</a></p>
 </body>
