--- a/second.html
+++ b/second.html
@@ -1,5 +1,6 @@
 <html>
     <head><title>Second Page</title></head>
+    <link rel="stylesheet" href="style.css">
 <body>
     <p>Welcome to my Second Page</p>
     <a href= "https://www.google.com">Google</a><br>
