--- a/third.html
+++ b/third.html
@@ -1,6 +1,7 @@
 <html>
     <head><title>Third Page</title></head>
 <body>
+    <link rel="stylesheet" href="style.css">
     <p>Welcome to my Third Page</p>
     <a href= "https://www.google.com">Google</a><br>
     <a href= "second.html"> Second Page </a><br>    
