--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li class="current"><a href="about.html">About</a></li>
                         <li><a href="blog.html">Blog</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
                 </nav>
             </div>
@@ -39,19 +40,20 @@
         <section id="main">
             <div class="container">
                 <article id="main-col">
-                    <h1 class="page-title">About My Website</h1>
+                    <h1 class="page-title">Who am I?</h1>
                     <p>
-                        ohohohohohohohohoh
+                        Hi, my name is Grace Pak and I'm a smol human. I'm currently a senior in high school preparing to go to college soon. Some of my hobbies including listening to music, baking, drawing, and crafting/making things in general. 
                     </p>
                     <p class="dark">
-                        dhfuehuiahiuehufhauhewuirhauhweuirhaiuher
+                        On my website it will most likely just mainly consist of my blog, but I will include a picture and/or song of the day. I hope you get amused by something on this website, but if not you can just press that exit up on your screen and continue on with your day. I also hope you have a nice day as well~!
                     </p>
                 </article>
                 
                 <aside id="sidebar">
                     <div class="dark">
-                        <h3>What I do</h3>
-                        <p>dkhfbakhwbekfawehafhwebfhb</p>
+                        <h3>Connect with Me</h3>
+                        <a href="https://www.instagram.com/grace._.pak/"><p>instagram:@grace._.pak</p></a>
+                        <a href="https://mrthoe.github.io/index.html"><p>class home page</p></a>
                     </div>
                 </aside>
             </div>
