--- a/about.html
+++ b/about.html
@@ -44,8 +44,8 @@
                     <p>
                         Hi, my name is Grace Pak and I'm a smol human. I'm currently a senior in high school preparing to go to college soon. Some of my hobbies including listening to music, baking, drawing, and crafting/making things in general. 
                     </p>
-                    <p class="dark">
-                        On my website it will most likely just mainly consist of my blog, but I will include a picture and/or song of the day. I hope you get amused by something on this website, but if not you can just press that exit up on your screen and continue on with your day. I also hope you have a nice day as well~!
+                    <p>
+                        On my website it will most likely just mainly consist of my blog, but I will include a picture (or video) and/or song of the day. I hope you get amused by something on this website, but if not you can just press that exit up on your screen and continue on with your day. I also hope you have a nice day as well~!
                     </p>
                 </article>
                 
