--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="personal, website">
         <meta name="author" content="Grace Pak">
         <title>PeachyMochi | Blog</title>
-        <link rel="shortcut icon" href ="https://mrthoe.github.io/csp/Pak.JPG" />
+        <link rel="shortcut icon" href ="https://i.pinimg.com/originals/c3/75/a8/c375a8f52cd8e5e92a8f168dd55eb3d1.png">
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
