added python guessing game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,9 @@
                      <a href="Story.zip">Download My Story<img src="./images/adventureStory.PNG"></a>
                 </div>
             </div>
+            <div class="container">
+                <a href="https://repl.it/@GracePak/SturdySlimSimulation">Python Guessing Game<img src="./images/guess.PNG"</a>
+            </div>
         </section>
                 
         </section>
