nothing really new

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,9 @@
                 </div>
             </div>
             <div class="container">
-                <a href="https://repl.it/@GracePak/SturdySlimSimulation">Python Guessing Game<img src="./images/guess.PNG"</a>
+                <div class="box">
+                    <a href="https://repl.it/@GracePak/SturdySlimSimulation">Python Guessing Game<img src="./images/guess.PNG"</a>
+                </div>
             </div>
         </section>
                 
