Changed placement of project titles in pirtfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,15 +32,13 @@
                     <h1 class="page-title">My Portfolio</h1>
                     <br>
                     <div class="box">
-                        <a href="https://repl.it/@GracePak/SturdySlimSimulation">
-                        <img border="0" src="./images/guess.PNG" width="30%" height="30%"></a>
                         <h4>Python Guessing Game</h4>
+                        <a href="https://repl.it/@GracePak/SturdySlimSimulation"><img border="0" src="./images/guess.PNG" width="30%" height="30%"></a>
                     </div>
                     <br>
                     <div class="box">
-                       <a href="Story.zip">
-                       <img border="0" src="./images/adventureStory.PNG" width"30%" height"30%"></a>
                         <h4>Download My Story</h4>
+                       <a href="Story.zip"><img border="0" src="./images/adventureStory.PNG" width"30%" height"30%"></a>
                     </div>
             </div>
         </section>
