changed portfolio project titles to 20%

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,12 +33,12 @@
                     <br>
                     <div class="box">
                         <h3>Python Guessing Game</h3>
-                        <a href="https://repl.it/@GracePak/SturdySlimSimulation"><img border="0" src="./images/guess.PNG" width="10%" height="10%"></a>
+                        <a href="https://repl.it/@GracePak/SturdySlimSimulation"><img border="0" src="./images/guess.PNG" width="20%" height="20%"></a>
                     </div>
                     <br>
                     <div class="box">
                         <h3>Download My Story</h3>
-                       <a href="Story.zip"><img border="0" src="./images/adventureStory.PNG" width"10%" height"10%"></a>
+                       <a href="Story.zip"><img border="0" src="./images/adventureStory.PNG" width="20%" height="20%"></a>
                     </div>
             </div>
         </section>
