added rail fence cipher to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,12 @@
                     <br>
                     <div class="box">
                         <h3>Download My Story</h3>
-                       <a href="Story.zip"><img border="0" src="./images/adventureStory.PNG" width="20%" height="20%"></a>
+                        <a href="Story.zip"><img border="0" src="./images/adventureStory.PNG" width="20%" height="20%"></a>
+                    </div>
+                    <br>
+                    <div class="box">
+                        <h3>Rail Fence Cipher</h3>
+                        <a href=/Pak_railFence.py><img border="0" src="./images/scramble.PNG" width="20%" height="20%"></a>
                     </div>
             </div>
         </section>
