--- a/blog.html
+++ b/blog.html
@@ -47,6 +47,12 @@
                            <p>Today I was really happy that there was no school today (It was Labor Day). I just did some homework, ate some food, and stress about life. I'm really sad that I have school tomorrow, but I can't wait til June so I can finally graduate and leave high school ( ; - ; ) yes. AP Physics is toasting my butt, but it's okay...? I hope it's okay...( ' - ' )</p>
                        </li>
                    </ul>
+                   <ul id="blog">
+                       <li>
+                           <h3>December 2, 2018</h3>
+                           <p>It's been a while since I've updated the blog...Long time no see (' - ') 1st Semester is going by pretty fast. I can't belive there's only a couple weeks left til winter break! Well life has been very stressful and boring, but it'll get better eventually ^^. 와...대박...2019년이 것오네...ㅎㅎ</p>
+                       </li>
+                   </ul>
                 </article>
                 
                 <aside id="sidebar">
