added snake game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,11 @@
                         <h3>Rail Fence Cipher</h3>
                         <a href=/Pak_railFence.py><img border="0" src="./images/scramble.PNG" width="20%" height="20%"></a>
                     </div>
+                    <br>
+                    <div class="box">
+                        <h3>Snake Game</h3>
+                        <a href=/snake_game.py><img border="0" src="./images/snakeGame.PNG" width="20%" height="20%"></a>
+                    </div>
             </div>
         </section>
         
