changed snake game href link and made it into a zip

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
                     <br>
                     <div class="box">
                         <h3>Snake Game</h3>
-                        <a href=/snake_game.py><img border="0" src="./images/snakeGame.PNG" width="20%" height="20%"></a>
+                        <a href=/pakGame.zip><img border="0" src="./images/snakeGame.PNG" width="20%" height="20%"></a>
                     </div>
             </div>
         </section>
