tried to add 2 new files on portfolio...

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,16 @@
                         <h3>Snake Game</h3>
                         <a href=/pak_game.zip><img border="0" src="./images/snakeGame.PNG" width="20%" height="20%"></a>
                     </div>
+                    <br>
+                    <div class="box">
+                        <h3>Drawing</h3>
+                        <a href=draw.html><img border="0" scr="./images/drawingGame.PNG" width="20%" height="20%"></a>
+                    </div>
+                    <br>
+                    <div class="box">
+                        <h3>Flying Luma</h3>
+                        <a href=flyingLuma.html><img border="0" scr="./images/flyingLuma.PNG" width="20%" height="20%"></a>
+                    </div>
             </div>
         </section>
         
