--- a/portfolio.html
+++ b/portfolio.html
@@ -52,13 +52,13 @@
                     </div>
                     <br>
                     <div class="box">
-                        <h3>Drawing</h3>
-                        <a href=draw.html><img border="0" scr="./images/drawingGame.PNG" width="20%" height="20%"></a>
+                        <h3>Drawing Game</h3>
+                        <a href="draw.html"><img border="0" scr="/images/drawing.PNG" width="20%" height="20%"></a>
                     </div>
                     <br>
                     <div class="box">
                         <h3>Flying Luma</h3>
-                        <a href=flyingLuma.html><img border="0" scr="./images/flyingLuma.PNG" width="20%" height="20%"></a>
+                        <a href="flyingLuma.html"><img border="0" scr="./images/pencil.png" width="20%" height="20%"></a>
                     </div>
             </div>
         </section>
