--- a/portfolio.html
+++ b/portfolio.html
@@ -53,12 +53,12 @@
                     <br>
                     <div class="box">
                         <h3>Drawing Game</h3>
-                        <a href="draw.html"><img border="0" scr="./images/drawing.PNG" width="20%" height="20%"></a>
+                        <a href="draw.html"><img src="./images/sleep.gif" width = "20%" height ="20%"></a>
                     </div>
                     <br>
                     <div class="box">
                         <h3>Flying Luma</h3>
-                        <a href="flyingLuma.html"><img src="./images/blush.gif"></a>
+                        <a href="flyingLuma.html"><img src="./images/blush.gif" width = "20%" height ="20%"></a>
                     </div>
             </div>
         </section>
